# catma

./: README.md  catma.yaml  pyproject.toml  scaffold.txt
catma_api/: __init__.py  main.py
catma_core/: __init__.py  io_yaml.py  model.py  render.py  validate.py
catma_ui/: app.py
examples/: ak_fsio.yaml
tests/: test_parse.py
